# VK-Service

./: .dockerignore  .gitignore  API_ENDPOINTS.md  Cargo.toml  Dockerfile  openapi.yaml
docs/: token-auth.md
src/: main.rs
src/adapters/: error.rs  middleware.rs  mod.rs  state.rs  storage_service_wrapper.rs
src/adapters/controllers/: file_controller.rs  health_controller.rs  instance_controller.rs  mod.rs  user_controller.rs
src/adapters/dto/: file_dto.rs  global_config_dto.rs  local_config_dto.rs  metadata_dto.rs  mod.rs  secrets_dto.rs  token_dto.rs  user_dto.rs
src/adapters/repositories/: mod.rs  pg_global_config_repository.rs  pg_local_config_repository.rs  pg_metadata_repository.rs  pg_secrets_repository.rs  pg_user_repository.rs  redis_token_repository.rs
src/application/: error.rs  mod.rs
src/application/dto/: global_config_dto.rs  local_config_dto.rs  metadata_dto.rs  mod.rs  secrets_dto.rs  user_dto.rs
src/application/repositories/: global_config_repository.rs  local_config_repository.rs  metadata_repository.rs  mod.rs  secrets_repository.rs  token_repository.rs  user_repository.rs
src/application/services/: mod.rs  storage_service.rs
src/domain/config/: global.rs  local.rs  mod.rs  secrets.rs
src/domain/models/: file.rs  metadata.rs  mod.rs  user.rs
src/services/: error.rs  google_drive_storage.rs  mod.rs  supabase_storage.rs
