[package]
name = "vk-service"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
aws-sdk-s3 = "1.75"
aws-smithy-runtime = { version = "1.7", features = ["tls-rustls"] }
axum = { version = "0.8", features = ["macros", "multipart", "tracing"] }
chrono = { version = "0.4.42", features = ["serde"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "tokio-rustls-comp"] }
reqwest = { version = "0.12.25", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "uuid", "runtime-tokio-rustls", "chrono"] }
sysinfo = "0.32"
thiserror = "2.0.17"
tokio = { version = "1.28.2", features = ["macros", "net", "rt-multi-thread", "time"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["serde", "v4", "v8"] }

[dev-dependencies]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
